k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naki-gateway-service
  namespace: naki
  labels:
    app: naki-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naki-gateway-service
  template:
    metadata:
      labels:
        app: naki-gateway-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: naki-gateway-service
          image: nakiacrplatform.azurecr.io/samples/naki:naki-gateway-service-1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
