k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naki-gateway-service
  namespace: naki
spec:
  selector:
    app: naki-gateway-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
