k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: naki-gateway-service
  namespace: naki
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gateway.naki.noldith.com
      secretName: naki-tls
  rules:
    - host: gateway.naki.noldith.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: naki-gateway-service
                port:
                  number: 80
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: naki-gateway-service
                port:
                  number: 80
